# flask-learning

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py
src/templates/: hello.html
tests/: test_app.py
