[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Abdullah Ozer <abdullahozer11@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
watchdog = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
